--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "json-server db.json --port 3005"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
